# jupyter_utils

./: LICENSE  agenda.ipynb  readme.md  setup.cfg
jupyter_utils/: agenda_ecn.py  auto_translate.py  img2html.py  student_notebook_export.py
