[metadata]
name = jupyter_utils
author = Lucas Lestandi
author_email = lucas.lestandi@ec-nantes.fr
version = 0.1
license_file = LICENSE
license = MIT
description = "useful termninal utils"
long_description = file: readme.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.8
install_requires = 
    pytest
    matplotlib
    requests

[options.entry_points]
console_scripts =
    img2html_base64=jupyter_utils.img2html:img2html_base64_parse
    media2html_base64=jupyter_utils.img2html:media2html_base64_parse

[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS